# budgie-control-center

./: .gitignore  CODEOWNERS  README.md  meson.build  meson_options.txt  mkrelease.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.tx/: config
data/: meson.build
data/icons/: meson.build
data/man/: budgie-control-center.xml
man/: budgie-control-center.xml
panels/: meson.build
panels/applications/: budgie-applications-panel.desktop.in.in  cc-applications-panel.c  meson.build  utils.c
panels/background/: bg-colors-source.c  budgie-background-panel.desktop.in.in  cc-background-chooser.c  cc-background-panel.c  cc-background-preview.ui  meson.build
panels/bluetooth/: budgie-bluetooth-panel.desktop.in.in  cc-bluetooth-panel.c  meson.build
panels/camera/: budgie-camera-panel.desktop.in.in  meson.build
panels/color/: budgie-color-panel.desktop.in.in  cc-color-calibrate.c  cc-color-panel.c  meson.build
panels/common/: cc-hostname-entry.c  meson.build
panels/datetime/: budgie-datetime-panel.desktop.in.in  cc-datetime-panel.c  meson.build  (+1 more)
panels/default-apps/: cc-default-apps-panel.c  (+3 more)
panels/power/icons/: meson.build
po/: LINGUAS  af.po  an.po  ar.po  as.po  be.po  bg.po  bn_IN.po  bs.po  budgie-control-center.pot  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  (+36 more)
scripts/: mesonPostInstall.sh  mkRelease.sh  updatePot.sh  updateTranslations.sh
shell/: budgie-control-center.desktop.in.in  budgie-control-center.gresource.xml  cc-application.c  cc-keyfile-search.c  cc-keyfile-search.h  cc-panel-list.c  cc-panel-loader.c  cc-window.c  cc-window.ui  labwc_keyfile.ini  main.c  meson.build  org.buddiesofbudgie.ControlCenter.desktop.in.in  org.buddiesofbudgie.ControlCenter.gschema.xml  org.buddiesofbudgie.ControlCenter.service.in
(+192 files in other folders)
