install_data(
  'scalable/org.buddiesofbudgie.Settings-power-symbolic.svg',
  install_dir: join_paths(control_center_icondir, 'hicolor', 'scalable', 'apps')
)

# what an oddity. icons should install to the same location.
install_data(
  'budgie-info-symbolic.svg',
  install_dir: join_paths(control_center_icondir, 'hicolor', 'scalable', 'status')
)
